# =============================================================================
# pyproject.toml — OrangeCashMachine
# SSOT único de build, dependencias, herramientas y contratos de arquitectura.
# Orden de secciones: build-system → project → dependency-groups → tools →
#   [tool.importlinter] (TIER 0 → TIER 7, orden BC-NN estrictamente secuencial)
# =============================================================================

[build-system]
requires = ["hatchling>=1.16.0"]
build-backend = "hatchling.build"

# =============================================================================
# Metadata del proyecto
# =============================================================================

[project]
name            = "orangecashmachine"
version         = "0.3.0"
description     = "Pipeline profesional de ingestión, procesamiento y almacenamiento de datos de mercado cripto — arquitectura medallion (Bronze/Silver/Gold), orquestación Dagster, data lakehouse Iceberg/DuckDB, observabilidad Prometheus"
readme          = "README.md"
requires-python = ">=3.11,<3.14"
authors         = [{ name = "orangemusic" }]

keywords = [
    "trading", "algorithmic-trading", "market-data", "crypto",
    "data-pipeline", "data-lakehouse", "iceberg", "dagster",
    "ccxt", "ohlcv", "quant",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "dagster>=1.7.0,<2.0",
    "dagster-webserver>=1.7.0,<2.0",
    # pydantic: pinneado en 2.8.2 — 2.9 introdujo breaking changes en
    # model_rebuild() con forward refs en schemas anidados (Hydra + Pydantic).
    # Desbloquear solo tras validar ocm/config/schema.py en staging completo.
    "pydantic==2.8.2",
    "pydantic-settings>=2.13.1,<3.0",
    "pandera>=0.20.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.3,<3.0",
    "pyarrow>=17.0,<20.0",
    # ccxt: pinneado en 4.3.58 — versiones posteriores cambian la firma de
    # fetch_ohlcv() y el campo default_type en exchange params (CCXTAdapter).
    # Actualizar solo tras smoke test completo contra Bybit + KuCoin en staging.
    "ccxt==4.3.58",
    # loguru: pinneado en 0.7.2 — API de sink Loki acoplada a esta versión.
    # Structlog también depende del record format de loguru. Actualizar con ambos.
    "loguru==0.7.2",
    "structlog>=24.1.0,<25.0",
    "httpx>=0.27.0,<1.0",
    "prometheus-client>=0.20.0,<1.0",
    # pyyaml: pinneado en 6.0.2 — Hydra 1.3.x requiere exactamente esta API
    # de yaml.safe_load con soporte de anchors. 6.1 cambió el comportamiento
    # de merge keys (<<) que se usan en config/. Desbloquear con Hydra 2.x.
    "pyyaml==6.0.2",
    "python-dotenv>=1.0,<3.0",
    "hydra-core>=1.3.2,<2.0",
    # aioresilience: pinneado en 0.2.1 — API de CircuitBreaker no estabilizada.
    # Versiones posteriores cambian el constructor y los hooks de estado.
    # Acoplado a import-linter CI (aioresilience rompe resolución en Python 3.12
    # con deps transitivas de anyio — ver MIGRATION.md §circuit-breaker).
    "aioresilience==0.2.1",
    "aiometer>=0.10.0",
    # pybreaker: pinneado en 1.4.1 — usado como fallback sync de circuit breaker.
    # 2.x cambia la interfaz de listeners. Sincronizar con aioresilience.
    "pybreaker==1.4.1",
    "redis>=7.4.0,<8.0",
    "aiokafka>=0.11.0,<1.0",
    # pyiceberg: <1.0 — API pública no estabilizada en 1.x todavía.
    # >=0.9.1: requiere TimestampType microsecond epoch (int) en scan filters.
    # Actualizar solo tras smoke test completo en staging (iceberg_storage tests).
    "pyiceberg[pyarrow,sql-sqlite]>=0.9.1,<1.0",
    "duckdb>=1.5.1,<2.0",
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.14.0,<0.29.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "polars[rtcompat]>=1.40.1",
    "great-expectations>=1.17.2",
    "lz4>=4.4.5",
]

[project.license]
text = "MIT"

[project.scripts]
ocm     = "app.cli.main:main"
ocm-api = "api.main:serve"
live    = "app.cli.live:main"
paper   = "app.cli.paper:main"

[project.urls]
Repository = "https://github.com/orangemusic/orangecashmachine"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-autodoc-typehints>=1.22,<2.0",
]
ci = [
    "pre-commit>=3.3,<4.0",
]

# =============================================================================
# Dependency groups (herramientas de desarrollo, no van al wheel)
# =============================================================================

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.4,<1.0",
    "import-linter>=2.1,<3.0",
    "structlog>=24.4.0",
    "httpx>=0.28.1",
    "bandit>=1.9.4",
    "pre-commit>=3.8.0",
    "pydeps>=3.0.6",
    "types-pyyaml>=6.0.12.20260518",
    "pandas-stubs>=3.0.0.260204",
]

# =============================================================================
# Herramientas
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode  = "auto"
testpaths     = ["tests"]
log_cli       = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# E402 — module level import not at top of file.
# Solo se permite en composition roots y entrypoints conocidos.
# NO ignorar globalmente: acotar por archivo para no enmascarar imports mal ubicados.
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# ── Composition roots y entrypoints ────────────────────────────────────────
# Lazy imports son intencionales: evitan circular imports en bootstrap order.
# Paths relativos al repo root (donde está pyproject.toml).
"infrastructure/dagster/assets/*.py"                                 = ["E402"]
"packages/market_data/infrastructure/bootstrap/container.py"        = ["E402"]
"packages/market_data/application/pipelines/ohlcv_pipeline.py"      = ["E402"]
"ocm/config/hydra_loader.py"                                         = ["E402"]
"ocm/config/loader/env_resolver.py"                                  = ["E402"]
"ocm/config/loader/yaml_loader.py"                                   = ["E402"]
"ocm/config/schema.py"                                               = ["E402"]
"ocm/observability/logger.py"                                        = ["E402"]
"ocm/observability/processors.py"                                    = ["E402"]
"ocm/observability/sinks.py"                                         = ["E402"]
"ocm/runtime/registry.py"                                            = ["E402"]
"ocm/runtime/run_config.py"                                          = ["E402"]
"ocm/runtime/state/gap_registry.py"                                  = ["E402"]
"ocm/runtime/state/lateness_calibration.py"                          = ["E402"]
"ocm/runtime/context.py"                                             = ["E402"]
"ocm/config/loader/snapshot.py"                                      = ["E402"]
"ocm/config/__init__.py"                                             = ["E402"]
"ocm/config/loader/__init__.py"                                      = ["E402"]
"ocm/config/credentials.py"                                          = ["E402"]
"ocm/config/paths.py"                                                = ["E402"]
"ocm/runtime/state/factories.py"                                     = ["E402"]
"ocm/runtime/state/adapters.py"                                      = ["E402"]
"ocm/runtime/lineage.py"                                             = ["E402"]
"ocm/observability/pushers.py"                                       = ["E402"]
"ocm/observability/config.py"                                        = ["E402"]
"ocm/observability/bootstrap.py"                                     = ["E402"]
"ocm/config/structured/pipeline.py"                                  = ["E402"]
"apps/app/cli/*.py"                                                  = ["E402"]
"infrastructure/redis/redis_stream.py"                               = ["E402"]
"packages/market_data/adapters/inbound/data_providers/*.py"          = ["E402"]
"packages/market_data/ports/outbound/observability.py"                = ["E402"]
# ── Tests — imports condicionales y fixtures con setup previo ───────────────
"tests/**/*.py"                                                      = ["E402"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true
exclude             = ["tests/", ".venv/"]
mypy_path           = "packages"

# =============================================================================
# Build
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = [
    "packages/market_data",
    "packages/trading",
    "packages/portfolio",
    "ocm",
    "infrastructure/dagster",
    "infrastructure/redis",
    "apps/api",
    "apps/app",
    "apps/research",
    "shared",                   # sin remapping — se instala desde la raíz
]

[tool.hatch.build.targets.wheel.sources]
"packages/market_data"   = "market_data"
"packages/trading"       = "trading"
"packages/portfolio"     = "portfolio"
"infrastructure/dagster" = "infrastructure/dagster"
"infrastructure/redis"   = "infrastructure/redis"
"apps/api"               = "api"
"apps/app"               = "app"
"apps/research"          = "research"
# shared: sin entrada — se instala desde la raíz directamente.

# =============================================================================
# Arquitectura (import-linter contracts)
# Movido a architecture/importlinter.toml — ver architecture/README.md
# Invocación: uv run python -c "from importlinter.cli import lint_imports; exit(lint_imports(config_filename='architecture/importlinter.toml'))"
# =============================================================================

# ---------------------------------------------------------------------------
# mypy overrides — librerías sin py.typed
# ---------------------------------------------------------------------------
# pyiceberg no incluye py.typed ni stubs oficiales.
# ignore_missing_imports = true (global) ya suprime ImportMissingStubs,
# pero ignore_errors = true aquí previene errores de tipo transitivos
# que pyiceberg puede filtrar hacia nuestro código cuando mypy sigue
# los imports a través de sus módulos internos.
[[tool.mypy.overrides]]
module        = ["pyiceberg.*"]
